diesel_compile_tests/tests/ui/belongs_to_missing_foreign_key_field.stderr
error: No field with column name bar_id
 --> $DIR/belongs_to_missing_foreign_key_field.rs:6:10
  |
6 | #[derive(Associations)]
  |          ^^^^^^^^^^^^

error: No field with column name bar_id
  --> $DIR/belongs_to_missing_foreign_key_field.rs:11:10
   |
11 | #[derive(Associations)]
   |          ^^^^^^^^^^^^

error: aborting due to 2 previous errors

